index.css
@import "./colors.css";
@import "./fonts.css";

body {
  background-color: var(--background);
  color: var(--text);
}
.content-grid {
  --padding-inline: 2rem;
  --content-max-width: 90ch;
  --breakout-max-width: 65ch;
  --breakout-size: calc(
    (var(--breakout-max-width) - var(--content-max-width)) / 2
  );
  display: grid;
  grid-template-columns:
    [full-width-start] minmax(var(--padding-inline), 1fr)
    [breakout-start] minmax(0, var(--breakout-size)) [content-start]
    min(100% - (var(--padding-inline) * 2), var(--content-max-width))
    [content-end] minmax(0, var(--breakout-size)) [breakout-start] minmax(
      var(--padding-inline),
      1fr
    )
    [full-width-end];
}
.content-grid > * {
  grid-column: content;
}
.content-grid > .breakout {
  grid-column: breakout;
}
.content-grid > .full-width {
  grid-column: full-width;
}

.center {
  margin: 2rem auto;
  > h2 {
    text-align: center;
    border: none;
  }
  > div {
    text-align: center;
    > a {
      padding: 0 10px;
    }
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
figure {
  margin: 10px 0;
}
h2 {
  border-bottom: 1px solid var(--accent);
}
p,
li,
a {
  font-size: 1rem; /* 16px */
  line-height: 1.8;
  color: var(--text);
}
a {
  padding-right: 10px;

  transition: opacity 0.3s ease;
  &:hover {
    transition: opacity 0.3s ease;
    opacity: 0.6;
  }
}

